--- a/index.html
+++ b/index.html
@@ -6,29 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" maximum-scale=2.0, minimum-scale=1.0, user-scalable=yes, target-densitydpi=medium-dpi>
     <link rel="stylesheet" href="./style.css">
-    <title>Emily Johnson & Emily Roberts: Time compresses by…</title>
+    <title>There are many ways to make our own design...</title>
 </head>
 
 <body>
 <!-- header -->
     <header>
         <div class="header_wrap">
-            <li><a href="#" target="_self">↑ 처음으로 돌아가기</a></li>
+            <li><a href="#" target="_self">↑ create!</a></li>
         </div>
     </header>
 
 <!-- Cover -->
     <div class="background">
-        <img src="./asset/process2.png" alt="" />
     </div>
     <div class="main">
-        <h2>Emily Johnson & Emily Roberts: Time compresses by…</h2>
+        <h2>There are many ways to<p>make our own design...</p></h2>
     </div>
 
 <!-- Image gallery -->
     <div class="row">
         <div class="column">
-            <img src="./asset/process1.png" alt="" style="width:100%">
+            <img src="/Users/yeonsuh/Desktop/3-1/피지컬워크숍 (1)/web/시도 1/try.../스크린샷 2024-06-10 오전 6.15.32.png" alt="" style="width:100%">
         </div>
         <div class="column">
             <img src="./asset/process1.png" alt="" style="width:100%">
@@ -80,7 +79,7 @@
     </div>
 
     <div class="contents">
-        <p><span>고유감각 Proprioception</span>; 자신의 위치, 자세, 평형 및 움직임 등에 대한 감각으로, 우리 몸이 어디에 위치해 있고 어떻게 움직이는지 아는 감각</p>
+        <p><span>Fungus Letter</span>;<p>치밀하게 나눠지는 시간의 상대성에 맞게 곰팡이를 쪼개고, 이를 다양한 절대적 상황에 대입해 하나의 곰팡이로 탄생시킨다.</p><p>독자는 만들어진 곰팡이의 형태를 바라보고, 이를 하나씩 쪼개진 요소로 분리하여 자세하게 상황을 해석함으로써 시간의 상대성과 절대성 모두를 경험한다.</p>
     </div>
 
     <div class="contents">
