--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     <div class="background">
     </div>
     <div class="main">
-        <h2>There are many ways to<p>make our own design...</p></h2>
+        <h2>Let's make<p>Fungus letter!</p></h2>
     </div>
 
 <!-- Image gallery -->
     <div class="row">
         <div class="column">
-            <img src="/Users/yeonsuh/Desktop/3-1/피지컬워크숍 (1)/web/시도 1/try.../스크린샷 2024-06-10 오전 6.15.32.png" alt="" style="width:100%">
+            <img src="/Users/yeonsuh/Desktop/3-1/피지컬워크숍 (1)/web/시도 1/try.../fungus2.png" alt="" style="width:100%">
         </div>
         <div class="column">
-            <img src="./asset/process1.png" alt="" style="width:100%">
+            <img src="/Users/yeonsuh/Desktop/3-1/피지컬워크숍 (1)/web/시도 1/try.../fungus2.png" alt="" style="width:100%">
         </div>
         <div class="column">
             <img src="./asset/process1.png" alt="" style="width:100%">
